Enhance Supabase integration in the web app. Added connection status checks and debug information in the homepage. Updated .gitignore to exclude IDE settings while keeping specific configuration files. Improved Supabase client error handling and added environment variable checks. Updated package.json with new debug scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,9 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # IDE
-.vscode/
+.vscode/*
+!.vscode/launch.json
+!.vscode/settings.json
 .idea/
 *.swp
 *.swo
