--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "debug": "next dev --turbo"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
