Add cursor rules and update README for project overview and setup instructions
- Introduced a new `.cursorrules` file detailing project structure, critical requirements, code style, and development workflow for the ABC Summit 2025 Conference App.
- Updated `README.md` to reflect the project overview, tech stack, installation instructions, and development timeline.
- Removed outdated admin pages for registrations, roommates, and users from the web app.
- Enhanced package.json scripts for easier navigation and development of web and mobile applications.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   ],
   "scripts": {
     "dev": "turbo run dev",
+    "web": "cd apps/web && npm run dev",
+    "mobile": "cd apps/mobile && npx expo start",
     "dev:web": "cd apps/web && npm run dev",
     "dev:mobile": "cd apps/mobile && npx expo start",
     "build": "turbo run build",
